prusti/tests/pass/parse/calls.stderr
Verification of 5 items...
error: [Prusti: verification error] statement might panic
  --> $DIR/calls.rs:32:5
   |
32 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/calls.rs:39:9
   |
39 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/calls.rs:47:1
   |
47 | / fn test_max3() -> i32 {
48 | |     let a = 4;
49 | |     let b = 3;
50 | |     max(a, b)
51 | | }
   | |_^

Verification failed
error: aborting due to 2 previous errors

